--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -6,7 +6,7 @@
       <div class="input-group main-search-field">
         <input class="form-control" type="text" name="keywordInput" id="keywordInput"
             [(ngModel)]="terms.keywords" [disabled]="searching" autofocus/>
-        <div class="input-group-btn">
+        <div class="input-group-append">
           <!-- prevent searching if input is empty or we're already searching -->
           <button class="btn btn-primary" type="submit" [disabled]="!terms.keywords || searching">
             <i class="spinner rotating" [hidden]="!searching"></i>
@@ -21,10 +21,10 @@
 <div class="container">
   <div class="search-results">
     <h2 *ngIf="ranSearch && !searching && count == 0">
-      <strong>No result<span *ngIf="count != 1">s</span> found for "{{keywords.length > 0 ? keywords.join(', ') : 'unknown'}}"</strong>
+      <strong>No Result<span *ngIf="count != 1">s</span> found for "{{keywords.length > 0 ? keywords.join(', ') : 'unknown'}}"</strong>
     </h2>
     <h2 *ngIf="ranSearch && !searching && count > 0">
-      <strong>{{count}} result<span *ngIf="count != 1">s</span> found for "{{keywords.length > 0 ? keywords.join(', ') : 'unknown'}}"</strong>
+      <strong>{{count}} Result<span *ngIf="count != 1">s</span> found for "{{keywords.length > 0 ? keywords.join(', ') : 'unknown'}}"</strong>
     </h2>
     <table class="table" *ngIf="!searching && count > 0">
       <thead>
