--- a/src/app/commenting/review-comments/review-comments.component.html
+++ b/src/app/commenting/review-comments/review-comments.component.html
@@ -1,41 +1,78 @@
 <ngb-alert type="danger" [dismissible]="false" *ngFor="let alert of alerts">{{alert}}</ngb-alert>
 
-<div class="review-comments">
+<div class="top-container">
+  <div class="container">
+    <div class="title-container">
+      <div class="title-container__title">
+        <h1><span class="text-muted">Crown land File: {{application.cl_file}} &nbsp;&rsaquo;&nbsp; </span> Review Comments</h1>
+        <span class="title-container__sub text-muted">Disposition Transaction: {{application.tantalisID}}</span>
+      </div>
+      <div class="title-container__actions">
+        <button class="btn btn-light" (click)="exportToExcel()" [disabled]="comments.length === 0">
+          Export to Excel
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="bottom-container">
+  <div class="container">
+    <div class="review-comments">
+      <div class="comment-list pane">
+        <div class="pane-header">
+          <h2>Comments ({{comments.length}})</h2>
+          <select class="form-control" (change)="getData()" [(ngModel)]="sortBy" >
+            <option *ngFor="let key of sortKeys" [value]="key.value" [innerHTML]="key.innerHTML"></option>
+          </select>
+        </div>
+        <div class="pane-scroll">
+          <ng-template ngFor let-item [ngForOf]="comments">
+            <div class="comment-item" [class.active]="isCurrentComment(item)" (click)="setCurrentComment(item)">
+              <div class="comment-item-header">
+                <div class="comment-author">
+                  {{item.commentAuthor?.contactName || '-'}}
+                </div>
+                <div class="comment-date">
+                  {{(item.dateAdded | date) || '-'}}
+                </div>
+              </div>
+              <div class="comment-body">{{item.comment}}</div>
+              <div>
+              </div>
+            </div>
+          </ng-template>
+        </div>
+      </div>
+      <div class="comment-review pane">
+        <div class="pane-scroll">
+          
+          <app-comment-detail [comment]="currentComment" (commentChange)="setCurrentComment($event)"></app-comment-detail>
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="review-comments" style="display: none;">
   <div class="container" *ngIf="application">
-    <div class="title-container mb-4">
-      <h1>Review Comments</h1>
-    </div>
-
-    <div class="header-row row">
-      <main class="col-md-8">
-        <!-- HEADER -->
-        <section class="card bg-dark">
-          <h2 class="mb-0">{{application.client || '-'}}</h2>
-          <div>{{application.purpose || '-'}} / {{application.subpurpose || '-'}}</div>
-          <ul class="review-comments__list">
-            <li>CL File: {{application['clFile'] || '-'}}</li>
-            <li>Disp ID: {{application.tantalisID || '-'}}</li>
-          </ul>
-        </section>
-      </main>
-
-      <nav class="col-md-4">
-        <section class="d-flex flex-column">
-          <a class="btn btn-light slide-l-btn p-1 my-1" [routerLink]="['/a', application._id]">
-            <i class="material-icons">info_outline</i>
-            <span>Application Details</span>
-          </a>
-          <button class="btn btn-light slide-l-btn p-1 my-1" (click)="addClick()" disabled aria-disabled="true">
-            <i class="material-icons">add</i>
-            <span>Add Comment</span>
-          </button>
-          <button class="btn btn-light slide-l-btn p-1 my-1" (click)="exportToExcel()" [disabled]="comments.length === 0">
-            <img src="assets/images/Microsoft_Excel_2013_logo.png" height="20" width="20" alt="Excel logo">
-            <span>Export to Excel</span>
-          </button>
-        </section>
-      </nav>
-    </div>
+    <nav class="col-md-4">
+      <section class="d-flex flex-column">
+        <a class="btn btn-light slide-l-btn p-1 my-1" [routerLink]="['/a', application._id]">
+          <i class="material-icons">info_outline</i>
+          <span>Application Details</span>
+        </a>
+        <button class="btn btn-light slide-l-btn p-1 my-1" (click)="addClick()" disabled aria-disabled="true">
+          <i class="material-icons">add</i>
+          <span>Add Comment</span>
+        </button>
+        <button class="btn btn-light slide-l-btn p-1 my-1" (click)="exportToExcel()" [disabled]="comments.length === 0">
+          <img src="assets/images/Microsoft_Excel_2013_logo.png" height="20" width="20" alt="Excel logo">
+          <span>Export to Excel</span>
+        </button>
+      </section>
+    </nav>
   </div>
 
   <div class="review-comments-body container" id="anchor-point" *ngIf="!loading">
